unpackaged/main/default/objects/Quote_ERP__c/fields/Quoted_Total_Qty_BinderJetting__c.field-meta.xml
<CustomField>
    <fullName>Quoted_Total_Qty_BinderJetting__c</fullName>
    <label>Quoted Total Qty BinderJetting</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>