unpackaged/main/default/objects/Quote_ERP__c/fields/Quoted_Total_Qty_InjectionMolding__c.field-meta.xml
<CustomField>
    <fullName>Quoted_Total_Qty_InjectionMolding__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Quoted Total Qty InjectionMolding</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>