unpackaged/main/default/objects/Quote_ERP__c/fields/Quoted_Total_Qty_Other_NotIncluded__c.field-meta.xml
<CustomField>
    <fullName>Quoted_Total_Qty_Other_NotIncluded__c</fullName>
    <label>Quoted Total Qty Other (NotIncluded)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>