unpackaged/main/default/objects/Quote_ERP__c/fields/Quoter_State__c.field-meta.xml
<CustomField>
    <fullName>Quoter_State__c</fullName>
    <formula>if(isblank(
 AccountID__c ), LeadID__r.State , AccountID__r.BillingState )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quoter State</label>
    <type>Text</type>
</CustomField>