unpackaged/main/default/objects/Quote_ERP__c/fields/Requested_Manual_Quote_Flag__c.field-meta.xml
<CustomField>
    <fullName>Requested_Manual_Quote_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field to allow for Case firings for PSE team.</description>
    <label>Requested Manual Quote Flag</label>
    <type>Checkbox</type>
</CustomField>