unpackaged/main/default/objects/Quote_ERP__c/fields/Requested_Manual_Quote_Time__c.field-meta.xml
<CustomField>
    <fullName>Requested_Manual_Quote_Time__c</fullName>
    <description>The first time the status in the erp became 'RFQ submitted'</description>
    <label>Requested Manual Quote Time</label>
    <type>DateTime</type>
</CustomField>