unpackaged/main/default/objects/Quote_ERP__c/fields/Safe_AL_Owner_ID__c.field-meta.xml
<CustomField>
    <fullName>Safe_AL_Owner_ID__c</fullName>
    <formula>if(isblank(AccountID__r.OwnerId), casesafeid(LeadID__r.OwnerId) , casesafeid(AccountID__r.OwnerId))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Safe A/L Owner ID</label>
    <type>Text</type>
</CustomField>