unpackaged/main/default/objects/Quote_ERP__c/fields/Safe_Contact_Lead_ID__c.field-meta.xml
<CustomField>
    <fullName>Safe_Contact_Lead_ID__c</fullName>
    <formula>if(isblank(ContactID__c),casesafeid( LeadID__c ) ,casesafeid(ContactID__c) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Safe Contact / Lead ID</label>
    <type>Text</type>
</CustomField>