unpackaged/main/default/objects/Quote_ERP__c/fields/Safe_Quote_ID__c.field-meta.xml
<CustomField>
    <fullName>Safe_Quote_ID__c</fullName>
    <formula>casesafeid(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Safe Quote ID</label>
    <type>Text</type>
</CustomField>