unpackaged/main/default/objects/Quote_ERP__c/fields/Search_Zendesk__c.field-meta.xml
<CustomField>
    <fullName>Search_Zendesk__c</fullName>
    <formula>hyperlink("https://xometry.zendesk.com/agent/search/1?q="+Xometry_ERP_ID__c,"Search this quote in Zendesk","_blank")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Search Zendesk</label>
    <type>Text</type>
</CustomField>