unpackaged/main/default/objects/Quote_ERP__c/fields/Strategic_Target__c.field-meta.xml
<CustomField>
    <fullName>Strategic_Target__c</fullName>
    <formula>AccountID__r.Strategic_Target__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Strategic Target</label>
    <type>Checkbox</type>
</CustomField>