unpackaged/main/default/objects/Quote_ERP__c/fields/suppress_opps_flag__c.field-meta.xml
<CustomField>
    <fullName>suppress_opps_flag__c</fullName>
    <formula>ContactID__r.Suppress_Opps_and_Leads_Flag__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>suppress opps flag</label>
    <type>Checkbox</type>
</CustomField>