unpackaged/main/default/objects/Quote_ERP__c/fields/UserUltimateDUNSNumber__c.field-meta.xml
<CustomField>
    <fullName>UserUltimateDUNSNumber__c</fullName>
    <label>User Ultimate DUNS Number</label>
    <length>9</length>
    <type>Text</type>
</CustomField>