unpackaged/main/default/objects/Quote_ERP__c/fields/Win_Rate_Expected_Value__c.field-meta.xml
<CustomField>
    <fullName>Win_Rate_Expected_Value__c</fullName>
    <label>Win Rate Expected Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>