unpackaged/main/default/objects/Quote_ERP__c/fields/X2D_Quote_URL__c.field-meta.xml
<CustomField>
    <fullName>X2D_Quote_URL__c</fullName>
    <formula>HYPERLINK("https://erp.xometry.com/rfqs?search="+Xometry_ERP_ID__c+"&amp;page=0&amp;perPage=25&amp;id=-1&amp;","Go to this Quote in the ERP","_blank")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>2D Quote URL</label>
    <type>Text</type>
</CustomField>