unpackaged/main/default/objects/Quote_ERP__c/fields/X2D_Task_Owner__c.field-meta.xml
<CustomField>
    <fullName>X2D_Task_Owner__c</fullName>
    <formula>IF(!ISBLANK(ContactID__c),

CASE(ContactID__r.Owner.UserRole.Name,
'BDR','0053u000003ArTAAA0',
'AE','0053u000003Gd4MAAS',
'AR','0053u000003ArSvAAK',
'SAM','0056A000002RymUQAS',
'SAE','0056A000002RymUQAS',
'0056A000002To3vQAC')

,
IF(!ISBLANK(LeadID__c),

CASE(LeadID__r.Owner:User.UserRole.Name,
'BDR','0053u000003ArTAAA0',
'AE','0053u000003Gd4MAAS',
'AR','0053u000003ArSvAAK',
'SAM','0056A000002RymUQAS',
'SAE','0056A000002RymUQAS',
'0056A000002To3vQAC')

,'0056A000002To3vQAC'))</formula>
    <label>RFQ Task Owner</label>
    <type>Text</type>
</CustomField>