unpackaged/main/default/objects/Quote_ERP__c/fields/Xometry_Order_ID__c.field-meta.xml
<CustomField>
    <fullName>Xometry_Order_ID__c</fullName>
    <externalId>true</externalId>
    <label>Order ID</label>
    <length>11</length>
    <type>Text</type>
</CustomField>