unpackaged/main/default/objects/Quote_ERP__c/recordTypes/Manufacturing_Services.recordType-meta.xml
<RecordType>
    <fullName>Manufacturing_Services</fullName>
    <active>true</active>
    <description>Core Services: Instant Quote, Marketplace, etc.</description>
    <label>Manufacturing Services</label>
</RecordType>