unpackaged/main/default/objects/Quote_ERP__c/recordTypes/X2D.recordType-meta.xml
<RecordType>
    <fullName>X2D</fullName>
    <active>true</active>
    <description>Merged into 3D and renamed to Manufacturing Services</description>
    <label>2D</label>
</RecordType>