unpackaged/main/default/objects/Quote_ERP__c/listViews/All_My_Quotes.listView-meta.xml
<ListView>
    <fullName>All_My_Quotes</fullName>
    <columns>Xometry_ERP_ID__c</columns>
    <columns>ERP_Quote_URL__c</columns>
    <columns>AccountID__c</columns>
    <columns>ContactID__c</columns>
    <columns>OpportunityID__c</columns>
    <columns>Last_Contact_Activity_AM__c</columns>
    <columns>Quote_ERP_Created_Date__c</columns>
    <columns>ERP_Status__c</columns>
    <columns>Manufacturing_Process__c</columns>
    <columns>Account_YTD_Spend__c</columns>
    <filterScope>Mine</filterScope>
    <label>All My Quotes</label>
</ListView>