unpackaged/main/default/objects/Quote_ERP__c/listViews/My_View_Copy_of_all_quotes.listView-meta.xml
<ListView>
    <fullName>My_View_Copy_of_all_quotes</fullName>
    <columns>NAME</columns>
    <columns>Xometry_ERP_ID__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Account_Domain__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>ERP_Contact_Last_Name__c</columns>
    <columns>ERP_Contact_Phone__c</columns>
    <columns>ERP_Status__c</columns>
    <columns>Last_Lead_Activity_AM__c</columns>
    <columns>Manufacturing_Process__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Quote_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>4/24/2022 12:00 AM</value>
    </filters>
    <label>My View - Copy of all quotes</label>
</ListView>