unpackaged/main/default/objects/Quote_ERP__c/listViews/X2D.listView-meta.xml
<ListView>
    <fullName>X2D</fullName>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>NAME</columns>
    <columns>Xometry_ERP_ID__c</columns>
    <columns>Bid_Due_Date__c</columns>
    <columns>Quote_Count__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>OpportunityID__c</columns>
    <columns>AccountID__c</columns>
    <columns>ContactID__c</columns>
    <columns>LeadID__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Quote_Email__c</columns>
    <columns>IS_Generic__c</columns>
    <columns>ERP_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Line_of_Business__c</field>
        <operation>equals</operation>
        <value>Marketplace</value>
    </filters>
    <label>Marketplace Quotes</label>
</ListView>